REL-013: Linux support